Make sure we return the token
We can't test this development workflow if we do not return
the token
