# cmd/api/users.go
@@ -25,6 +25,11 @@ type RegisteredUserPayload struct {
 	Password string `json:"password" validate:"required,min=8,max=72"`
 }
 
+type UserWithToken struct {
+	*store.User
+	Token string `json:"token"`
+}
+
 // GetUser godoc
 //
 //	@Summary		Fetches a user profile
@@ -127,7 +132,7 @@ func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Reque
 //	@Accept			json
 //	@Produce		json
 //	@Param			payload	body		RegisteredUserPayload	true	"User credentials"
-//	@Success		201		{object}	store.User				"User registered"
+//	@Success		201		{object}	UserWithToken			"User registered"
 //	@Failure		400		{object}	error
 //	@Failure		500		{object}	error
 //	@Router			/users/authentication/user [post]
@@ -177,7 +182,12 @@ func (app *application) registerUserHandler(w http.ResponseWriter, r *http.Reque
 
 	// TODO: Send the email
 
-	if err := app.jsonResponse(w, http.StatusCreated, user); err != nil {
+	userWithToken := UserWithToken{
+		User:  user,
+		Token: plainToken,
+	}
+
+	if err := app.jsonResponse(w, http.StatusCreated, userWithToken); err != nil {
 		app.internalServerError(w, r, err)
 	}
 }
